syntax = "proto3";

package user;

service UserService {
  rpc FindAll (FindAllRequest) returns (FindAllResponse);
  rpc FindById (FindByIdRequest) returns (FindByIdResponse);
  rpc Create (CreateUserRequest) returns (CreateUserResponse);
}

message FindAllRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
}

message FindAllResponse {
  repeated UserData data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message FindByIdRequest {
  string id = 1;
}

message FindByIdResponse {
  UserData data = 1;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  UserData data = 1;
}

message UserData {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

